Junit adaptations