@@ -5,19 +5,22 @@ import com.github.personalitytest.converter.ResultConverter;
 import com.github.personalitytest.converter.UserConverter;
 import com.github.personalitytest.dto.ResultDto;
 import com.github.personalitytest.dto.UserDto;
+import com.github.personalitytest.exception.ErrorResponse;
 import com.github.personalitytest.exception.NotFoundException;
-import com.github.personalitytest.exception.NotValidException;
 import com.github.personalitytest.model.Result;
 import com.github.personalitytest.model.User;
 import com.github.personalitytest.repository.ResultRepository;
 import com.github.personalitytest.repository.UserRepository;
+import com.github.personalitytest.type.Gender;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
 import org.mockito.ArgumentMatchers;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -47,28 +50,23 @@ class ResultServiceTest extends AbstractTest {
   void setUp() {
     autoCloseable = MockitoAnnotations.openMocks(this);
 
-    UserConverter userConverter = new UserConverter();
-    ResultConverter resultConverter = new ResultConverter();
-    UserService userService = new UserService(userRepository, userConverter);
+    var userConverter = new UserConverter();
+    var resultConverter = new ResultConverter();
+    var userService = new UserService(userRepository, userConverter);
     resultService = new ResultService(resultRepository, userService, resultConverter, userConverter);
 
-    userDto1 = new UserDto(UUID.randomUUID(), "Patrick", "Male", 25);
-    user1 = userConverter.convertDtoToEntity(userDto1);
-    result1 = new Result();
-    result1.setId(UUID.randomUUID());
-    result1.setUser(user1);
-    result1.setAnswers(List.of(1, 1, 1, 1, 1, 1, 1, 1, 1, 1));
+    user1 = User.builder().id(UUID.randomUUID()).name("Patrick").gender(Gender.MALE).age(25).build();
+    userDto1 = userConverter.convertEntityToDto(user1);
+
+    result1 = Result.builder().id(UUID.randomUUID()).user(user1).answers(List.of(1, 1, 1, 1, 1, 1, 1, 1, 1, 1)).build();
     result1.calculateResults();
     result1.calculateAvgScore();
     resultDto1 = resultConverter.convertEntityToDto(result1);
 
-    result2 = new Result();
-    result2.setId(UUID.randomUUID());
-    result2.setUser(user1);
-    result2.setAnswers(List.of(4, 4, 4, 4, 4, 4, 4, 4, 4, 4));
+    result2 = Result.builder().id(UUID.randomUUID()).user(user1).answers(List.of(4, 4, 4, 4, 4, 4, 4, 4, 4, 4)).build();
     result2.calculateResults();
     result2.calculateAvgScore();
-    resultDto2 = resultConverter.convertEntityToDto(result1);
+    resultDto2 = resultConverter.convertEntityToDto(result2);
 
   }
 
@@ -78,173 +76,162 @@ class ResultServiceTest extends AbstractTest {
   }
 
   @Test
-  void getAll() {
-    when(resultRepository.findAll()).thenReturn(List.of(result1));
-    List<ResultDto> resultsDto = resultService.getAll();
+  void getAll_Success() {
+    when(resultRepository.findAll()).thenReturn(List.of(result1, result2));
+    var resultsDto = resultService.getAll();
 
-    assertEquals(1, resultsDto.size());
+    assertEquals(2, resultsDto.size());
     verify(resultRepository).findAll();
   }
 
   @Test
-  void getAll_ResultsNotFound() {
-    when(resultRepository.findAll()).thenReturn(List.of());
-    List<ResultDto> resultsDto = resultService.getAll();
+  void getAll_Empty() {
+    when(resultRepository.findAll()).thenReturn(Collections.emptyList());
+    var resultsDto = resultService.getAll();
 
     assertEquals(0, resultsDto.size());
     verify(resultRepository).findAll();
   }
 
   @Test
-  void get() {
+  void get_Success() {
     when(resultRepository.findById(ArgumentMatchers.any(UUID.class))).thenReturn(Optional.of(result1));
-    ResultDto resultDto = resultService.get(result1.getId());
+    var resultDto = resultService.get(result1.getId());
 
     assertThat(resultDto).isNotNull();
+    assertEquals(result1.getId(), resultDto.getId());
+    assertEquals(result1.getCompleted(), resultDto.getCompleted());
+    assertEquals(result1.getUser().getId(), resultDto.getUser().getId());
+    assertEquals(result1.getUser().getName(), resultDto.getUser().getName());
+    assertEquals(result1.getUser().getGender().getValue(), resultDto.getUser().getGender());
+    assertEquals(result1.getUser().getAge(), resultDto.getUser().getAge());
+    assertEquals(result1.getAnswers(), resultDto.getAnswers());
+    assertEquals(result1.getResults(), resultDto.getResults());
+    assertEquals(result1.getAvgScore(), resultDto.getAvgScore());
     verify(resultRepository).findById(result1.getId());
   }
 
   @Test
-  void get_ResultNotFound() {
+  void get_NotFound() {
     when(resultRepository.findById(ArgumentMatchers.any(UUID.class))).thenReturn(Optional.empty());
-    NotFoundException exception = assertThrows(NotFoundException.class, () -> resultService.get(result1.getId()));
-    assertEquals(RESULT_GET_NOT_FOUND, exception.getMessage());
+    var exception = assertThrows(NotFoundException.class, () -> resultService.get(result1.getId()));
+    assertEquals(ErrorResponse.RESULT_GET_NOT_FOUND, exception.getMessage());
   }
 
   @Test
-  void getByUserId() {
-    when(resultRepository.findAll()).thenReturn(List.of(result1));
-    List<ResultDto> resultsDto = resultService.getByUserId(userDto1.getId());
+  void getByUserId_Success() {
+    when(resultRepository.findByUser(ArgumentMatchers.any(UUID.class))).thenReturn(List.of(result1));
+    var resultsDto = resultService.findByUser(userDto1.getId());
 
     assertEquals(1, resultsDto.size());
-    verify(resultRepository).findAll();
+    verify(resultRepository).findByUser(userDto1.getId());
   }
 
   @Test
-  void getByUserId_ResultsNotFound() {
-    when(resultRepository.findAll()).thenReturn(List.of());
-    List<ResultDto> resultsDto = resultService.getByUserId(userDto1.getId());
+  void getByUserId_NotFound() {
+    when(resultRepository.findByUser(ArgumentMatchers.any(UUID.class))).thenReturn(Collections.emptyList());
+    var resultsDto = resultService.findByUser(userDto1.getId());
 
     assertEquals(0, resultsDto.size());
-    verify(resultRepository).findAll();
+    verify(resultRepository).findByUser(userDto1.getId());
   }
 
   @Test
-  void create() {
+  void create_Success() {
     when(userRepository.findById(ArgumentMatchers.any(UUID.class))).thenReturn(Optional.of(user1));
-    when(resultRepository.save(ArgumentMatchers.any(Result.class))).thenReturn(result1);
     when(resultRepository.findById(ArgumentMatchers.any(UUID.class))).thenReturn(Optional.of(result1));
-    ResultDto resultDto = resultService.create(resultDto1.getUser().getId(), resultDto1);
+    var resultDto = resultService.create(resultDto1.getUser().getId(), resultDto1);
+    var captor = ArgumentCaptor.forClass(Result.class);
 
     assertThat(resultDto).isNotNull();
-    assertEquals(resultDto1.getId(), resultDto.getId());
-    assertEquals(resultDto1.getAnswers(), resultDto.getAnswers());
-    assertEquals(resultDto1.getResults(), resultDto.getResults());
-    assertEquals(resultDto1.getAvgScore(), resultDto.getAvgScore());
+    verify(resultRepository).save(captor.capture());
+    assertEquals(resultDto1.getCompleted(), captor.getValue().getCompleted());
+    assertEquals(resultDto1.getUser().getId(), captor.getValue().getUser().getId());
+    assertEquals(resultDto1.getUser().getName(), captor.getValue().getUser().getName());
+    assertEquals(resultDto1.getUser().getGender(), captor.getValue().getUser().getGender().toString());
+    assertEquals(resultDto1.getUser().getAge(), captor.getValue().getUser().getAge());
+    assertEquals(resultDto1.getAnswers(), captor.getValue().getAnswers());
+    assertEquals(resultDto1.getResults(), captor.getValue().getResults());
+    assertEquals(resultDto1.getAvgScore(), captor.getValue().getAvgScore());
   }
 
   @Test
   void create_UserNotFound() {
     when(userRepository.findById(ArgumentMatchers.any(UUID.class))).thenReturn(Optional.empty());
-    NotFoundException exception = assertThrows(NotFoundException.class, () ->
+    var exception = assertThrows(NotFoundException.class, () ->
         resultService.create(userDto1.getId(), resultDto1));
-    assertEquals(USER_GET_NOT_FOUND, exception.getMessage());
+    assertEquals(ErrorResponse.USER_GET_NOT_FOUND, exception.getMessage());
   }
 
   @Test
-  void update() {
-    when(userRepository.findById(ArgumentMatchers.any(UUID.class))).thenReturn(Optional.of(user1));
+  void update_Success() {
     when(resultRepository.existsById(ArgumentMatchers.any(UUID.class))).thenReturn(true);
     when(resultRepository.findById(ArgumentMatchers.any(UUID.class))).thenReturn(Optional.of(result1));
-    when(resultRepository.save(ArgumentMatchers.any(Result.class))).thenReturn(result1);
-    ResultDto resultDto = resultService.update(userDto1.getId(), resultDto2);
+    var resultDto = resultService.update(resultDto1.getId(), resultDto2);
+    var captor = ArgumentCaptor.forClass(Result.class);
 
     assertThat(resultDto).isNotNull();
-    assertEquals(resultDto1.getId(), resultDto.getId());
-    assertEquals(resultDto2.getAnswers(), resultDto.getAnswers());
-    assertEquals(resultDto2.getResults(), resultDto.getResults());
-    assertEquals(resultDto2.getAvgScore(), resultDto.getAvgScore());
+    verify(resultRepository).save(captor.capture());
+    assertEquals(resultDto1.getId(), captor.getValue().getId());
+    assertEquals(resultDto2.getCompleted(), captor.getValue().getCompleted());
+    assertEquals(resultDto2.getUser().getId(), captor.getValue().getUser().getId());
+    assertEquals(resultDto2.getUser().getName(), captor.getValue().getUser().getName());
+    assertEquals(resultDto2.getUser().getGender(), captor.getValue().getUser().getGender().getValue());
+    assertEquals(resultDto2.getUser().getAge(), captor.getValue().getUser().getAge());
+    assertEquals(resultDto2.getAnswers(), captor.getValue().getAnswers());
+    assertEquals(resultDto2.getResults(), captor.getValue().getResults());
+    assertEquals(resultDto2.getAvgScore(), captor.getValue().getAvgScore());
   }
 
   @Test
-  void update_ResultDoesNotExist() {
-    when(resultRepository.existsById(ArgumentMatchers.any(UUID.class))).thenReturn(false);
-    NotFoundException exception = assertThrows(NotFoundException.class, () ->
-        resultService.update(resultDto1.getId(), resultDto1));
-    assertEquals(RESULT_DOES_NOT_EXIST, exception.getMessage());
-  }
-
-  @Test
-  void update_ResultNotFound() {
-    when(resultRepository.existsById(ArgumentMatchers.any(UUID.class))).thenReturn(true);
+  void update_NotFound() {
     when(resultRepository.findById(ArgumentMatchers.any(UUID.class))).thenReturn(Optional.empty());
-    NotFoundException exception = assertThrows(NotFoundException.class, () ->
+    var exception = assertThrows(NotFoundException.class, () ->
         resultService.update(resultDto1.getId(), resultDto1));
-    assertEquals(RESULT_UPDATE_NOT_FOUND, exception.getMessage());
+    assertEquals(ErrorResponse.RESULT_UPDATE_NOT_FOUND, exception.getMessage());
   }
 
   @Test
-  void delete() {
+  void delete_Success() {
     when(resultRepository.existsById(ArgumentMatchers.any(UUID.class))).thenReturn(true);
     boolean resultDeleted = resultService.delete(resultDto1.getId());
     assertTrue(resultDeleted);
   }
 
   @Test
-  void delete_ResultDoesNotExist() {
+  void delete_DoesNotExist() {
     when(resultRepository.existsById(ArgumentMatchers.any(UUID.class))).thenReturn(false);
-    NotFoundException exception = assertThrows(NotFoundException.class, () ->
+    var exception = assertThrows(NotFoundException.class, () ->
         resultService.delete(resultDto1.getId()));
-    assertEquals(RESULT_DOES_NOT_EXIST, exception.getMessage());
+    assertEquals(ErrorResponse.RESULT_DOES_NOT_EXIST, exception.getMessage());
   }
 
   @Test
   void deleteByUserId() {
     when(resultRepository.existsById(ArgumentMatchers.any(UUID.class))).thenReturn(true);
-    boolean resultDeleted = resultService.delete(userDto1.getId());
+    var resultDeleted = resultService.delete(userDto1.getId());
     assertTrue(resultDeleted);
   }
 
   @Test
   void deleteByUserId_UserDoesNotExist() {
     when(userRepository.existsById(ArgumentMatchers.any(UUID.class))).thenReturn(false);
-    NotFoundException exception = assertThrows(NotFoundException.class, () ->
+    var exception = assertThrows(NotFoundException.class, () ->
         resultService.deleteByUserId(userDto1.getId()));
-    assertEquals(USER_DOES_NOT_EXIST, exception.getMessage());
+    assertEquals(ErrorResponse.USER_DOES_NOT_EXIST, exception.getMessage());
   }
 
   @Test
-  void exists() {
+  void exists_Success() {
     when(resultRepository.existsById(ArgumentMatchers.any(UUID.class))).thenReturn(true);
-    boolean resultExists = resultService.exists(resultDto1.getId());
+    var resultExists = resultService.exists(resultDto1.getId());
     assertTrue(resultExists);
   }
 
   @Test
-  void exists_ResultDoesNotExist() {
+  void exists_DoesNotExist() {
     when(resultRepository.existsById(ArgumentMatchers.any(UUID.class))).thenReturn(false);
-    NotFoundException exception = assertThrows(NotFoundException.class, () -> resultService.exists(resultDto1.getId()));
-    assertEquals(RESULT_DOES_NOT_EXIST, exception.getMessage());
+    var exception = assertThrows(NotFoundException.class, () -> resultService.exists(resultDto1.getId()));
+    assertEquals(ErrorResponse.RESULT_DOES_NOT_EXIST, exception.getMessage());
   }
-
-  @Test
-  void validate() {
-    boolean resultValid = resultService.validate(resultDto1);
-    assertTrue(resultValid);
-  }
-
-  @Test
-  void validate_AnswerSizeNotValid() {
-    resultDto1.setAnswers(List.of(1, 1, 1, 1));
-    NotValidException exception = assertThrows(NotValidException.class, () -> resultService.validate(resultDto1));
-    assertEquals(RESULT_VALIDATION_ANSWER_SIZE_ERROR, exception.getMessage());
-  }
-
-  @Test
-  void validate_AnswerValueNotValid() {
-    resultDto1.setAnswers(List.of(1, 1, 1, 1, 0, 1, 1, 1, 1, 1));
-    NotValidException exception = assertThrows(NotValidException.class, () -> resultService.validate(resultDto1));
-    assertEquals(RESULT_VALIDATION_ANSWER_VALUE_ERROR, exception.getMessage());
-  }
-
 }
